fixed UI not aligned

--- a/backend/public/css/style.css
+++ b/backend/public/css/style.css
@@ -18,25 +18,40 @@
     justify-content: center;
 }
 
+header{
+    margin-bottom: 60px;
+    margin-top: 0;
+}
+
 .nav{
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
-	background-color: #333;
+	background-color: #222;
+    display: flex;
 }
-
+.navbar{
+    display: inline;
+}
+.navcontainer li {
+    display: inline;
+}
+.logo{
+    float:left;
+    position: absolute;
+    top: 0;
+    left: 10%;
+}
 .li1 {
 	float: right;
-	display: block;
 	color: rgb(255, 255, 255);
 	text-align: center;
-	padding: 14px 16px;
+	padding: 5px 5px;
 	font-family: Helvetica;
-	font-size: 26px;
+	font-size: 20px;
 	border-radius: 25px;
-	background: #000000;
-	padding: 20px;
-	width: 650px;
-	height: 35px;
+	background: #222;
+	width: 40%;
+    margin-top: 45px;
 }
